Added more content

--- a/cv.tex
+++ b/cv.tex
@@ -9,7 +9,7 @@
 \usepackage[nodayofweek, level]{datetime}
 \usepackage{subfiles}
 \titleformat{\section}{\vspace{-2mm}\huge\bfseries}{}{0em}{}[\titlerule]
-\titleformat{\subsection}{\large\bfseries}{}{0em}{}
+\titleformat{\subsection}{\bfseries}{}{0em}{}
 \titleformat{\subsubsection}[runin]{}{}{0em}{}[ --- ]
 \newcommand\textbox[1]{%
 	\parbox{.333\textwidth}{#1}%
@@ -33,11 +33,34 @@ Windows, CentOS, Android, Arduino, Raspberry Pi, Nvidia Jetson, RoboRio
 Microsoft Office, Adobe Photoshop, Git, Unity
 \vspace*{-4mm}
 \section{Work History}
-\subsection{Nebbiolo Technologies - Software Engineering Intern\null\hfill 2018 --- San Jose, CA}
+\subsection{Nebbiolo Technologies -- Software Engineering Intern\null\hfill Jun 2018 -- Aug 2018}
 Designed an developed various features, including distributed computing, high availability data, and data visualization, while learning about corporation level programming workflows, networking topics, Unix, and proper design and architecture.
 By working in a professional environment, I also developed strong teamwork and communication skills.
 \vspace*{-2mm}
+\section{Activities and Projects}
+\subsection{Ocarina of Time Randomizer -- Open Source Contributor\null\hfill Aug 2018 -- Present}
+I currently am actively contributing to Ocarina of Time Randomizer, an open source game hack played by thousands of people with active tournaments. I work with assembly (MIPS) and raw binary data, as well as C and python to modify the original game's behavior.
+My work is a directly application of what I have learned in my first semester at UIUC from ECE 120.
+My fork can be seen at \\\underline{https://github.com/KevinPal/OoT-Randomizer}
+\vspace*{-2mm}
+\subsection{CS Honors Project -- UI Traffic\null\hfill Aug 2018 -- Dec 2018}
+Developed a mobile application using React Native to monitor and display crowded areas on campus.
+\vspace*{-2mm}
+\subsection{ECE Honors Project -- IOT Smart Hub\null\hfill Aug 2018 -- Dec 2018}
+Created an application that gathered data from sensors and could turn on and off devices based on sensor values, as well as display data on web portal.
+Developed using PHP, the TICK stack, and ESP32, and hardware logic.
+\subsection{FIRST Robotics -- Programming Lead\null\hfill Aug 2014 -- May 2018}
+Lead a team of students to program an FRC robot with our efforts qualifying us for the world championships for the first time in 10 years.
+Learned concepts such as PID, vision processing, distributed computing, path planning, and motion profiling.
+I also learned how to delegate tasks and lead a team.
+\section{Achievements}
+{\bfseries API World 2017} -- 1\textsuperscript{st} place at the Dell Boomi Challenge, the largest API integration hackathon.\\
+{\bfseries Integrate 2015} -- 2\textsuperscript{nd} place at the Net App Challenge at the largest API integration hackathon\\
+{\bfseries AP Scholar with Distinction} -- Award given to students who scored high on 5 AP Exams\\
+{\bfseries FIRST Engineering and Inspiration Award} -- Awarded to the robotics team that promotes engineering in their community and displays excellence in engineering.
 \section{Education}
 University of Illinois at Urbana-Champaign\null\hfill(2018 - \emph{Expected} May 2022)\\
-		   \emph{Bachelor of Science, Computer Engineering}
+\emph{Bachelor of Science, Computer Engineering}\\
+{\bfseries Current: }ECE 220, ECE 110\\
+{\bfseries Completed: }ECE 120 HONORS, CS 196 HONORS, APCSA, APCSP\\
 \end{document}
