Filled more out

--- a/cv.tex
+++ b/cv.tex
@@ -23,15 +23,10 @@
 \begin{document}
 \maketitle
 \section{Technical Skills}
-\subsection{Programming Languages}
-Java, Python, GoLang, C, PHP, MIPS
-\vspace*{-4mm}
-\subsection{Platforms}
-Windows, CentOS, Android, Arduino, Raspberry Pi, Nvidia Jetson, RoboRio
-\vspace*{-4mm}
-\subsection{Tools}
-Microsoft Office, Adobe Photoshop, Git, Unity
-\vspace*{-4mm}
+{\bfseries Programming Languages} Java, Python, GoLang, C, PHP, MIPS\\
+{\bfseries Platforms} Windows, CentOS, Android, Arduino, Raspberry Pi, Nvidia Jetson, RoboRio\\
+{\bfseries Tools} Microsoft Office, Adobe Photoshop, Git, Unity
+\vspace*{-2mm}
 \section{Work History}
 \subsection{Nebbiolo Technologies -- Software Engineering Intern\null\hfill Jun 2018 -- Aug 2018}
 Designed an developed various features, including distributed computing, high availability data, and data visualization, while learning about corporation level programming workflows, networking topics, Unix, and proper design and architecture.
@@ -49,10 +44,12 @@ Developed a mobile application using React Native to monitor and display crowded
 \subsection{ECE Honors Project -- IOT Smart Hub\null\hfill Aug 2018 -- Dec 2018}
 Created an application that gathered data from sensors and could turn on and off devices based on sensor values, as well as display data on web portal.
 Developed using PHP, the TICK stack, and ESP32, and hardware logic.
+\vspace*{-2mm}
 \subsection{FIRST Robotics -- Programming Lead\null\hfill Aug 2014 -- May 2018}
 Lead a team of students to program an FRC robot with our efforts qualifying us for the world championships for the first time in 10 years.
 Learned concepts such as PID, vision processing, distributed computing, path planning, and motion profiling.
 I also learned how to delegate tasks and lead a team.
+\vspace*{-2mm}
 \section{Achievements}
 {\bfseries API World 2017} -- 1\textsuperscript{st} place at the Dell Boomi Challenge, the largest API integration hackathon.\\
 {\bfseries Integrate 2015} -- 2\textsuperscript{nd} place at the Net App Challenge at the largest API integration hackathon\\
