--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,12pt]{article}
+\documentclass[letterpaper,11pt]{article}
 \usepackage{multicol}
 \usepackage{vwcol}
 \usepackage{titlesec}
@@ -33,10 +33,9 @@ Designed an developed various features, including distributed computing, high av
 By working in a professional environment, I also developed strong teamwork and communication skills.
 \vspace*{-2mm}
 \section{Activities and Projects}
-\subsection{Ocarina of Time Randomizer -- Open Source Contributor\null\hfill Aug 2018 -- Present}
-I currently am actively contributing to Ocarina of Time Randomizer, an open source game hack played by thousands of people with active tournaments. I work with assembly (MIPS) and raw binary data, as well as C and python to modify the original game's behavior.
-My work is a directly application of what I have learned in my first semester at UIUC from ECE 120.
-My fork can be seen at \\\underline{https://github.com/KevinPal/OoT-Randomizer}
+\subsection{Ocarina of Time Randomizer -- Open Source Contributor\null\hfill Aug 2018 -- Dec 2018}
+Worked on the Ocarina of Time Randomizer, an open source game hack played by thousands of people with active tournaments. I work with assembly (MIPS) and raw binary data, as well as C and python to modify the original game's behavior.
+My work is a directly application of what I have learned in my first semester at University.
 \vspace*{-2mm}
 \subsection{CS Honors Project -- UI Traffic\null\hfill Aug 2018 -- Dec 2018}
 Developed a mobile application using React Native to monitor and display crowded areas on campus.
@@ -58,6 +57,5 @@ I also learned how to delegate tasks and lead a team.
 \section{Education}
 University of Illinois at Urbana-Champaign\null\hfill(2018 - \emph{Expected} May 2022)\\
 \emph{Bachelor of Science, Computer Engineering}\\
-{\bfseries Current: }ECE 220, ECE 110\\
-{\bfseries Completed: }ECE 120 HONORS, CS 196 HONORS, APCSA, APCSP\\
+{\bfseries Completed: }ECE 220, ECE 110, ECE 120 HONORS, CS 196 HONORS, APCSA, APCSP\\
 \end{document}
